# actik

./: README.md
client/: .gitignore  components.json  next.config.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/admin-login/: page.tsx
client/app/auth/callback/: route.ts
client/app/dashboard/: page.tsx
client/app/login/: page.tsx
client/app/signup/: page.tsx
client/components/: admin-login-form.tsx  hero-section.tsx  login-form.tsx  logo.tsx  navbar.tsx  signup-form.tsx  user.tsx
client/components/ui/: alert-dialog.tsx  button.tsx  dropdown-menu.tsx  freepixel.tsx  mode-toggle.tsx  select.tsx
client/public/: attribution.html
client/supabase/: action-client.ts  action.ts  server.ts
server/: .gitignore  pyproject.toml  run.py
server/app/: main.py
server/app/core/: settings.py
server/app/institution/: router.py  schemas.py
